[gd_scene load_steps=2 format=3 uid="uid://bx7qgba8g1yi2"]

[ext_resource type="Script" path="res://Inventory/stash.gd" id="1_b1vic"]

[node name="Stash" type="MarginContainer"]
custom_minimum_size = Vector2(816, 1248)
offset_right = 824.0
offset_bottom = 1248.0
scale = Vector2(1, 0.992461)
script = ExtResource("1_b1vic")

[node name="StashBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(816, 1248)
layout_mode = 2
color = Color(0.143, 0.168667, 0.22, 0.666667)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(792, 1248)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="LeftSpacer" type="Control" parent="VBoxContainer/Header"]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(272, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer"]
layout_mode = 2

[node name="SpawnButton" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Spawn Item"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AddRow" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " + Row"

[node name="RemoveRow" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " - Row"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AddColumn" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " + Col"

[node name="RemoveColumn" type="Button" parent="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " - Col"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Header"]
clip_contents = true
custom_minimum_size = Vector2(272, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Stash" type="Label" parent="VBoxContainer/Header/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Stash"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/Header"]
custom_minimum_size = Vector2(272, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Header/CenterContainer2"]
layout_mode = 2

[node name="StashValueUSD" type="Label" parent="VBoxContainer/Header/CenterContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "$ 182,372.00"

[node name="StashValueBTC" type="Label" parent="VBoxContainer/Header/CenterContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "â‚¿ 3.128754996"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(798, 8)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 28

[node name="SlotgridContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[connection signal="pressed" from="VBoxContainer/Header/MarginContainer/HBoxContainer/SpawnButton" to="." method="_on_spawn_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/AddRow" to="." method="_on_add_row_pressed"]
[connection signal="pressed" from="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/RemoveRow" to="." method="_on_remove_row_pressed"]
[connection signal="pressed" from="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/AddColumn" to="." method="_on_add_column_pressed"]
[connection signal="pressed" from="VBoxContainer/Header/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer2/RemoveColumn" to="." method="_on_remove_column_pressed"]
